--- a/index.html
+++ b/index.html
@@ -372,8 +372,11 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="image"><img src="images/imagem_projeto_fraude.jpg" alt="" width="500" height="250" /></a>
-											<h3>A detecção inadequada ou a falta de dados precisos sobre transações fraudulentas pode levar a prejuízos financeiros significativos, subnotificação ou supernotificação de fraudes, além de dificultar o monitoramento eficaz de comportamentos fraudulentos.</h3>
-											<p>Criar um sistema robusto de detecção de fraudes que permita a identificação precisa de transações fraudulentas em tempo real. Este sistema visa reduzir a ocorrência de fraudes, minimizar os custos com investigações desnecessárias, e melhorar a alocação de recursos para a análise de transações suspeitas.</p>
+											<h3>Qual deverá ser o próximo lançamento cinematográfico da PProductions?
+												Essa questão norteia todo o projeto e foi cuidadosamente formulada para ser respondida a partir de diferentes perspectivas analíticas. O objetivo é combinar análise exploratória de dados, modelagem preditiva e considerações
+												de mercado a fim de identificar padrões de sucesso, prever tendências e avaliar fatores determinantes para o desempenho de um filme.
+												Dessa forma, busca-se oferecer à PProductions uma orientação estratégica sólida, que maximize não apenas o potencial financeiro de bilheteria e receita, mas também o reconhecimento crítico e o impacto junto ao público.</h3>
+											<p>Orientar a PProductions sobre qual tipo de filme desenvolver a seguir.</p>
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
@@ -384,7 +387,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
-												<li>Conclusão: 01/2025</li>
+												<li>Conclusão: 08/2025</li>
 												<li><a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -414,4 +417,5 @@
 
 	</body>
 </html>
+
 
