--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="image"><img src="images/imagem_projeto_fraude.jpg" alt="" width="500" height="250" /></a>
+											<a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="image"><img src="images/images/imagem_projeto_cinema.png" alt="" width="500" height="250" /></a>
 											<h3>Qual deverá ser o próximo lançamento cinematográfico da PProductions?
 												Essa questão norteia todo o projeto e foi cuidadosamente formulada para ser respondida a partir de diferentes perspectivas analíticas. O objetivo é combinar análise exploratória de dados, modelagem preditiva e considerações
 												de mercado a fim de identificar padrões de sucesso, prever tendências e avaliar fatores determinantes para o desempenho de um filme.
@@ -417,5 +417,6 @@
 
 	</body>
 </html>
+
 
 
