--- a/index.html
+++ b/index.html
@@ -372,10 +372,8 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/case_indicium.git" class="image"><img src="images/images/imagem_projeto_cinema.png" alt="" width="500" height="250" /></a>
-											<h3>Qual deverá ser o próximo lançamento cinematográfico da PProductions?
-												Essa questão norteia todo o projeto e foi cuidadosamente formulada para ser respondida a partir de diferentes perspectivas analíticas.
-												Dessa forma, busca-se oferecer à PProductions uma orientação estratégica sólida, que maximize não apenas o potencial financeiro de bilheteria e receita, mas também o reconhecimento crítico e o impacto junto ao público.</h3>
-											<p>Orientar a PProductions sobre qual tipo de filme desenvolver a seguir.</p>
+											<h3>Qual deverá ser o próximo lançamento cinematográfico da PProductions?</h3>
+											<p>Essa questão norteia todo o projeto e foi cuidadosamente formulada para ser respondida a partir de diferentes perspectivas analíticas. Dessa forma, busca-se oferecer à PProductions uma orientação estratégica sólida, sobre qual tipo de filme desenvolver a seguir.</p>
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
@@ -416,6 +414,7 @@
 
 	</body>
 </html>
+
 
 
 
