--- a/index.html
+++ b/index.html
@@ -388,6 +388,24 @@
 												<li><a href="https://github.com/leonardonassibfonseca/case_indicium.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/segmentacao_de_clientes.git" class="image"><img src="images/imagem_projeto_clusterizacao.png" alt="" width="500" height="250" /></a>
+											<h3>Como segmentar os clientes de forma estratégica para compreender diferentes perfis de comportamento de compra e apoiar decisões de negócio?</h3>
+											<p>Identificar segmentos distintos de clientes com base em características demográficas e comportamentais, permitem compreender quem são os clientes mais valiosos, quais padrões de consumo existem e como direcionar estratégias de marketing de forma mais eficiente.</p>
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>VScode;</li>
+														<li>Terminal;</li>
+														<li>Ambiente Virtual;</li>
+														<li>Git;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li>Conclusão: 12/2025</li>
+												<li><a href="https://github.com/leonardonassibfonseca/segmentacao_de_clientes.git" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
@@ -414,6 +432,7 @@
 
 	</body>
 </html>
+
 
 
 
